--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.473.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
