--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.6",
     "ui": "github:shadcn/ui",
     "web-vitals": "^4.2.4"
